syntax = "proto3";

package db;
option go_package = "github.com/dominant-strategies/go-quai/core/rawdb";

message ProtoNumber { uint64 number = 1; }

message ProtoTxLookupEntry {
  uint64 block_index = 1;
}
